--- a/539_ICE2/css/ice-style1.css
+++ b/539_ICE2/css/ice-style1.css
@@ -43,7 +43,7 @@ aside {
 	background-position: 50% 50%;
 	float: right;
 	height: 100vh;
-	width: 20%;
+	width: 15%;
 
 }
 
@@ -51,7 +51,7 @@ aside {
 	background-color: #545549;
 	margin: 0px;
 	height: 100vh;
-	width: 80%;
+	width: 85%;
 	float: left;
 }
 
@@ -77,9 +77,9 @@ aside {
 
 footer{
 	background-color: #0E7E12;
-	height: 15%;
-  position: relative;
-	width: 80%;
+	height: 40px;
+	/*position: relative;*/
+	width: 85%;
 	float: left; 
 
 }
