--- a/Portfolio/CSS/homepage.css
+++ b/Portfolio/CSS/homepage.css
@@ -38,6 +38,18 @@
 	font-size: 16px;
 }
 
+.container .row img{
+	padding: 5%;
+}
+
+footer{
+	text-align: center;
+	font-size: 10px;	
+}
+
+.footer{
+	font-size: 14px;
+}
 
 h1 {
 	font-size: 40px;
