--- a/Portfolio/CSS/homepage.css
+++ b/Portfolio/CSS/homepage.css
@@ -1,12 +1,13 @@
 .navbar {
 		margin-bottom: 0;
 		border-radius: 0;
-		background-color: #FFF;
+		background-color: #fff;
 		color: #000;
 		padding: 1% 0;
 		font-size: 14px;
 		border: 0;
 		font-family: Lato Light;
+		position: top;	
 	}
 
 .navbar-brand {
@@ -15,12 +16,7 @@
 		padding: 0 15px 5px;
 	}
 
-.navbar-inverse .navbar-nav .active a, .navbar-inverse .navbar-nav .active a:focus, .navbar-inverse .navbar-nav .active a:hover {
-		color: #000;
-		background-color: #fff;
-	}
-
-.navbar-inverse .navbar-nav li a {
+.navbar-default .navbar-nav li a {
 		color: #C3C3C3;
 	}
 
@@ -45,10 +41,13 @@
 }
 
 .container .goal{
-
 	
 }
 
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
+    color: #555;
+     background-color: #fff!important; 
+}
 .container .overview{
 	text-align: left;
 	padding-left: 8%;
@@ -65,22 +64,41 @@
 }
 
 
-.btn{
+/*.btn{
 	font-family: Lato Light;
 	margin-top: 2%;
-}
+	color: black;
+	background-color:white;
+	border: solid 1px;
+	border-color: #c3c3c3;
+}*/
 
 .container img{
 	padding-bottom: 5%;
 
 }
 
-.myDesign{
+/*.myDesign{
 	padding-left: 20%;
+	padding-bottom: 5%;
+}
+*/
+.myIntroduction{
+	padding-left:10%;
+	padding-right:10%;
+	text-align: left;
+
 }
 
 .fa{
-	margin: 5px;
+	margin: 2px;
+	color: #999;
+}
+
+.contact{
+	font-family: Lato Regular;
+	text-align:center;
+	padding-top: 10px;
 }
 
 footer{
@@ -88,7 +106,6 @@ footer{
 	font-size: 10px;
 	padding-top: 5%;	
 }
-
 
 
 h1 {
