--- a/Portfolio/CSS/homepage.css
+++ b/Portfolio/CSS/homepage.css
@@ -50,8 +50,8 @@
 }
 .container .overview{
 	text-align: left;
-	padding-left: 8%;
-	width: 90%;
+	padding-left: 12%;
+	width: 80%;
 }
 
 .col-sm-4{
@@ -62,16 +62,6 @@
 .footer{
 	font-size: 14px;
 }
-
-
-/*.btn{
-	font-family: Lato Light;
-	margin-top: 2%;
-	color: black;
-	background-color:white;
-	border: solid 1px;
-	border-color: #c3c3c3;
-}*/
 
 .container img{
 	padding-bottom: 5%;
@@ -86,8 +76,9 @@
 
 }
 
+
 .designProcess img{
-	padding-left: 10%;
+	padding-left: 12%;
 	padding-top: 5%;
 }
 
@@ -107,23 +98,34 @@
     width: 50%;
     padding: 20px;
 }
+.goodbuy{
+	background-image: url("../images/582_head.jpg");
+	background-size: cover;
+	margin:0 auto;
+	width: 60vw;
+	height: 40vw;
+	background-repeat: no-repeat;
+}
+
 @media screen and (max-width: 992px) {
   .column{
     width: 50%;
+    padding-left: 5%;
   }
 }
 
-/* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
+/* On screens that are 768px wide or less, make the columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 768px) {
   .column {
     width: 100%;
+    padding-left: 5%;
   }
 }
 
 footer{
 	text-align: center;
 	font-size: 10px;
-	padding-top: 5%;	
+	padding-top: 5%;
 }
 
 
