--- a/Portfolio/CSS/homepage.css
+++ b/Portfolio/CSS/homepage.css
@@ -107,6 +107,10 @@
 	background-repeat: no-repeat;
 }
 
+.about img{
+	width: 40%;
+
+}
 @media screen and (max-width: 992px) {
   .column{
     width: 50%;
